# genmail-app

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  SETUP.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
apps/ai-service/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml  requirements.txt
apps/ai-service/migrations/: 001_initial.sql  002_seed_icps.sql
apps/ai-service/src/: main.py  schemas.py
apps/ai-service/src/embeddings/: __init__.py  chunker.py  provider.py
apps/ai-service/src/llm/: __init__.py  provider.py
apps/ai-service/src/prompts/: __init__.py  classify_lead.py  diagnose_incident.py  evaluate_email.py  evaluate_valentin_email.py  extract_voice.py  generate_cold_email.py  generate_email.py  generate_valentin_email.py  reply_classify.py  score_lead.py  sequence_valentin.py
apps/ai-service/tests/: conftest.py  test_embedding_performance.py  test_embedding_quality.py  test_endpoints.py
apps/watchdog/: Dockerfile  config.py  main.py  models.py  requirements.txt
apps/watchdog/audit/: __init__.py  audit_log.py
apps/watchdog/collectors/: __init__.py  db_collector.py  deliverability_collector.py  health_collector.py  metrics_collector.py  redis_collector.py
apps/web/: .env.local.example  next.config.js  package.json  tsconfig.json  vercel.json
apps/worker/: Dockerfile  README.md  entrypoint.sh  package.json  tsconfig.json
docs/: ARCHITECTURE.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/nginx/: genmail.conf
infra/scripts/: backup.sh  migrate.sh  setup-vps.sh
(+108 files in other folders)
